--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Verificar archivos HTML
-        run: |
+        run: 
           sudo apt-get install -y html-xml-utils
           htmldoc -v index.html
 
@@ -31,7 +31,7 @@ jobs:
         run: npm install htmlhint
 
       - name: Ejecutar validación de HTML
-        run: |
+        run: 
           htmlhint index.html
 
   desplegar:
@@ -42,6 +42,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Empaquetar la aplicación para el despliegue
-        run: |
+        run: 
           zip -r paginaWebCR7.zip .
           echo "Desplegando paginaWebCR7.zip"
