--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -16,9 +16,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Verificar archivos HTML
-        run: 
-          sudo apt-get install -y html-xml-utils
-          htmldoc -v index.html
+        run:  sudo apt-get install -y html-xml-utils  
+
+      - name: Ejecutar
+        run:  htmldoc -v index.html
 
   pruebas:
     runs-on: ubuntu-latest
