--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -16,10 +16,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Verificar archivos HTML
-        run:  sudo apt-get install -y html-xml-utils  
-
-      - name: Ejecutar
-        run:  htmldoc -v index.html
+        run: |
+          sudo apt-get install -y html-xml-utils
+          htmldoc -v index.html
 
   pruebas:
     runs-on: ubuntu-latest
@@ -32,7 +31,7 @@ jobs:
         run: npm install htmlhint
 
       - name: Ejecutar validación de HTML
-        run: 
+        run: |
           htmlhint index.html
 
   desplegar:
@@ -43,6 +42,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Empaquetar la aplicación para el despliegue
-        run: 
+        run: |
           zip -r paginaWebCR7.zip .
           echo "Desplegando paginaWebCR7.zip"
