--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -15,17 +15,10 @@ jobs:
       - name: Revisar el código
         uses: actions/checkout@v3
 
-      - name: Instalar Node.js y HTMLHint
+      - name: Verificar archivos HTML
         run: |
-          # Instalamos Node.js (si no está instalado) y HTMLHint
-          sudo apt-get update
-          sudo apt-get install -y nodejs npm
-          npm install -g htmlhint
-
-      - name: Ejecutar validación de HTML con HTMLHint
-        run: |
-          # Ejecutamos HTMLHint para validar los archivos HTML
-          htmlhint index.html
+          sudo apt-get install -y html-xml-utils
+          htmldoc -v index.html
 
   pruebas:
     runs-on: ubuntu-latest
@@ -34,7 +27,10 @@ jobs:
       - name: Revisar el código
         uses: actions/checkout@v3
 
-      - name: Ejecutar pruebas de validación de HTML
+      - name: Instalar HTMLHint
+        run: npm install htmlhint
+
+      - name: Ejecutar validación de HTML
         run: |
           htmlhint index.html
 
@@ -47,7 +43,5 @@ jobs:
 
       - name: Empaquetar la aplicación para el despliegue
         run: |
-          # Empaquetamos los archivos en un archivo .zip
-          zip -r website.zip .
-          # Simulamos el despliegue subiendo el archivo comprimido como artefacto
-          echo "Desplegando website.zip"
+          zip -r paginaWebCR7.zip .
+          echo "Desplegando paginaWebCR7.zip"
